--- a/ATA_WPF/Dictionary1.xaml
+++ b/ATA_WPF/Dictionary1.xaml
@@ -14,6 +14,28 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}"> 
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border> 
+                </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FFEDF4F7"/>
+                   
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+            </Trigger>
+            </Style.Triggers>
+        </Style>
+
+<!-- STYLE FOR SECOND ROW BUTTONS -->
+        <Style TargetType="{x:Type Button}" x:Key="styleSecondRowButton">
+            <Setter Property="Background" Value="#FFC1D7E6"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
                         <Border Background="{TemplateBinding Background}">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
@@ -23,13 +45,88 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#FFEDF4F7"/>
-                    <Setter Property="Button.BorderBrush" Value="Black"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
 
 
-            <!-- STYLE FOR THE HEADER TEXT -->
+<!-- STYLE FOR THIRD ROW BUTTONS -->
+    <Style TargetType="{x:Type Button}" x:Key="styleThirdRowButton">
+        <Setter Property="Background" Value="#FFAAD3E8"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFEDF4F7"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+            
+<!-- STYLE FOR FOURTH ROW BUTTONS -->
+    <Style TargetType="{x:Type Button}" x:Key="styleFourthRowButtons">
+        <Setter Property="Background" Value="#FF90CCEA"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFEDF4F7"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+<!-- STYLE FOR FIFTH ROW BUTTONS -->
+    <Style TargetType="{x:Type Button}" x:Key="styleFifthRowButtons">
+        <Setter Property="Background" Value="#FF7DB3EA"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFEDF4F7"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
+    
+    
+    
+    
+<!-- STYLE FOR BORDERS WHEN MOUSE OVER BUTTONS
+    BUT NOT WORKING -->
+    <Style TargetType="Border" x:Key="borderForButtonsStyle">
+        <Setter Property="Background" Value="Black">
+            
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="Background" Value="Green"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
+    
+    <!-- STYLE FOR THE HEADER TEXT -->
     <Style TargetType="TextBlock" x:Key="styleForHeaderTextBlock">
         <Setter Property="FontFamily" Value="Constantia"/>
         <Setter Property="FontSize" Value="16"/>
@@ -48,6 +145,33 @@
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="16"/>
     </Style>
-            
-            
+    
+    <!-- IS ACTIVE style -->
+    <Style TargetType="TextBlock" x:Key="styleIsRun">
+        <Setter Property="FontFamily" Value="Consolas"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="16"/>
+    </Style>
+
+    <!-- CURRENT UPTIME style -->
+    <Style TargetType="TextBlock" x:Key="styleCurrentUptime">
+        <Setter Property="FontFamily" Value="Consolas"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Margin" Value="10,0,0,0" />
+    </Style>
+    
+    
+    <!-- TOTAL UPTIME style -->
+    <Style TargetType="TextBlock" x:Key="styleTotalUptime">
+        <Setter Property="FontFamily" Value="Consolas"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Margin" Value="20,0,-4,0" />
+    </Style>
+
 </ResourceDictionary>
